; ModuleID = '/home/carl/AnghaBench/php-src/ext/enchant/extr_enchant.c_enumerate_providers_fn.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/enchant/extr_enchant.c_enumerate_providers_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"desc\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"file\00", align 1
@IS_ARRAY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*, i8*)* @enumerate_providers_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enumerate_providers_fn(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %9, align 8
  %13 = call i32 @array_init(i32* %10)
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @add_assoc_string(i32* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @add_assoc_string(i32* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @add_assoc_string(i32* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8* %18)
  %20 = load i32*, i32** %9, align 8
  %21 = call i64 @Z_TYPE_P(i32* %20)
  %22 = load i64, i64* @IS_ARRAY, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %4
  %25 = load i32*, i32** %9, align 8
  %26 = call i32 @array_init(i32* %25)
  br label %27

27:                                               ; preds = %24, %4
  %28 = load i32*, i32** %9, align 8
  %29 = call i32 @add_next_index_zval(i32* %28, i32* %10)
  ret void
}

declare dso_local i32 @array_init(i32*) #1

declare dso_local i32 @add_assoc_string(i32*, i8*, i8*) #1

declare dso_local i64 @Z_TYPE_P(i32*) #1

declare dso_local i32 @add_next_index_zval(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
